<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.spaceyquiz.StartscreenActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/medium_spacing"
    android:animateLayoutChanges="true"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_thin"
        android:textSize="@dimen/question_text_size"
        android:text="@string/be_worthy"
        android:textAlignment="center"
        android:id="@+id/startscreen_question"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_spacing"
        android:id="@+id/player_name"
        android:visibility="gone"
        android:inputType="textCapWords"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_spacing"
        android:id="@+id/player_name_answer"
        android:visibility="gone"
        android:inputType="textCapWords"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/checkboxes_container"
        android:layout_marginTop="@dimen/medium_spacing"
        android:visibility="gone"
        >
        <CheckBox
            style="@style/checkboxStyle"
            android:text="@string/startscreen_answer_1"
            android:id="@+id/checkbox1"
            />
        <CheckBox
            style="@style/checkboxStyle"
            android:text="@string/startscreen_answer_2"
            android:id="@+id/checkbox2"
            />
        <CheckBox
            style="@style/checkboxStyle"
            android:text="@string/startscreen_answer_3"
            android:id="@+id/checkbox3"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="@dimen/medium_spacing"
        android:layout_marginTop="@dimen/medium_spacing"
        android:id="@+id/next">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/understand"
            android:fontFamily="@font/roboto_thin"
            android:textSize="@dimen/question_text_size"
            android:textAllCaps="true"
            android:textColor="@color/submit_got_color"
            android:id="@+id/next_text"
            />
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/next"
            android:layout_marginLeft="@dimen/small_spacing"
            android:visibility="visible"
            />
    </LinearLayout>
</LinearLayout>
