<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.spaceyquiz.MainActivity"
    android:orientation="vertical"
    >
   <TextView
       android:layout_width="match_parent"
       android:layout_height="@dimen/null_size"
       android:layout_weight="1"
       android:text="@string/space_quiz"
       android:textAlignment="center"
       android:gravity="center_vertical"
       android:background="@color/colorPrimary"
       android:textColor="@color/white_general"
       android:fontFamily="@font/roboto_thin"
       android:textSize="@dimen/category_text_size"
       android:id="@+id/to_space_quiz" >

   </TextView>
   <TextView
       android:layout_width="match_parent"
       android:layout_height="@dimen/null_size"
       android:layout_weight="1"
       android:text="@string/got_quiz"
       android:textAlignment="center"
       android:gravity="center_vertical"
       android:background="#212121"
       android:textColor="@color/white_general"
       android:fontFamily="@font/roboto_thin"
       android:textSize="@dimen/category_text_size"
       android:id="@+id/to_other_quiz"
       />
   <TextView
       android:layout_width="match_parent"
       android:layout_height="@dimen/null_size"
       android:layout_weight="1"
       android:text="@string/quantum_quiz"
       android:textAlignment="center"
       android:gravity="center_vertical"
       android:background="@color/colorAccent"
       android:textColor="@color/white_general"
       android:fontFamily="@font/roboto_thin"
       android:textSize="@dimen/category_text_size"
       android:id="@+id/to_other_quiz2"
       />
</LinearLayout>
