<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.spaceyquiz.GotActivity"
    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/got1"
            android:scaleType="centerCrop"
            android:id="@+id/changeable_image"
            />
    </FrameLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/medium_spacing"
            android:paddingRight="@dimen/medium_spacing"
            android:paddingTop="@dimen/small_spacing"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/layers"
                    android:clickable="true"
                    android:onClick="changeImage"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/idea"
                    android:clickable="true"
                    android:onClick="showHint"
                    android:layout_centerHorizontal="true"
                    />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/question_textbox_size"
                android:text="@string/question_one"
                android:textAlignment="center"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/small_spacing"
                android:id="@+id/question_text_view"
                android:textSize="@dimen/question_text_size"
                android:textColor="@color/text_color_white"
                android:layout_marginBottom="@dimen/small_spacing"
                android:fontFamily="@font/game_of_thrones"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/finished_quiz"
                android:orientation="vertical"
                android:background="@color/white_general"
                android:padding="@dimen/medium_spacing"
                android:visibility="gone"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="@dimen/null_size"
                        android:layout_height="wrap_content"
                        android:text="@string/correct_answers"
                        android:layout_weight="2"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/roboto_thin"
                        android:textColor="@color/text_color"
                        />
                    <TextView
                        android:layout_width="@dimen/null_size"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_gravity="center_vertical"
                        android:text=""
                        android:textAlignment="center"
                        android:id="@+id/final_correct_answers"
                        android:fontFamily="@font/roboto_thin"
                        android:textColor="@color/text_color"
                        />
                    <ImageView
                        android:layout_width="@dimen/null_size"
                        android:layout_height="wrap_content"
                        android:src="@drawable/success"
                        android:layout_weight="1"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_spacing"
                    >
                    <TextView
                        android:layout_width="@dimen/null_size"
                        android:layout_height="wrap_content"
                        android:text="@string/wrong_answers"
                        android:layout_weight="2"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/roboto_thin"
                        android:textColor="@color/text_color" />
                    <TextView
                        android:layout_width="@dimen/null_size"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_gravity="center_vertical"
                        android:text=""
                        android:textAlignment="center"
                        android:id="@+id/final_wrong_answers"
                        android:fontFamily="@font/roboto_thin"
                        android:textColor="@color/text_color"
                        />
                    <ImageView
                        android:layout_width="@dimen/null_size"
                        android:layout_height="wrap_content"
                        android:src="@drawable/error"
                        android:layout_weight="1"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_spacing"
                    >
                    <TextView
                        android:layout_width="@dimen/null_size"
                        android:layout_height="wrap_content"
                        android:text="@string/time_elapsed"
                        android:layout_weight="2"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/roboto_thin"
                        android:textColor="@color/text_color"
                        />
                    <TextView
                        android:layout_width="@dimen/null_size"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_gravity="center_vertical"
                        android:text=""
                        android:textAlignment="center"
                        android:id="@+id/final_time_elapsed"
                        android:fontFamily="@font/roboto_thin"
                        android:textColor="@color/text_color"
                        />
                    <ImageView
                        android:layout_width="@dimen/null_size"
                        android:layout_height="wrap_content"
                        android:src="@drawable/hourglass"
                        android:layout_weight="1"
                        />
                </LinearLayout>
            </LinearLayout>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <android.support.v7.widget.AppCompatRadioButton
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/radio_button_height"
                    android:text="@string/trick_answer1_1"
                    android:id="@+id/answer1"
                    android:onClick="onRadioButtonClicked"
                    android:paddingLeft="@dimen/medium_spacing"
                    android:paddingRight="@dimen/medium_spacing"
                    android:textColor="@color/text_color"
                    android:background="@drawable/radio_button_background"
                    android:button="@android:color/transparent"
                    android:drawableLeft="@drawable/sword"
                    android:drawablePadding="@dimen/small_spacing"
                    android:fontFamily="@font/roboto_light"
                    />
                <android.support.v7.widget.AppCompatRadioButton
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/radio_button_height"
                    android:text="@string/trick_answer2_1"
                    android:id="@+id/answer2"
                    android:onClick="onRadioButtonClicked"
                    android:paddingLeft="@dimen/medium_spacing"
                    android:textColor="@color/text_color"
                    android:background="@drawable/radio_button_background"
                    android:button="@android:color/transparent"
                    android:drawableLeft="@drawable/sword"
                    android:paddingRight="@dimen/medium_spacing"
                    android:drawablePadding="@dimen/small_spacing"
                    android:fontFamily="@font/roboto_light"
                    />
                <android.support.v7.widget.AppCompatRadioButton
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/radio_button_height"
                    android:text="@string/correct_answer3_1"
                    android:id="@+id/answer3"
                    android:onClick="onRadioButtonClicked"
                    android:paddingLeft="@dimen/medium_spacing"
                    android:paddingRight="@dimen/medium_spacing"
                    android:textColor="@color/text_color"
                    android:background="@drawable/radio_button_background"
                    android:button="@android:color/transparent"
                    android:drawableLeft="@drawable/sword"
                    android:drawablePadding="@dimen/small_spacing"
                    android:fontFamily="@font/roboto_light"
                    />
                <android.support.v7.widget.AppCompatRadioButton
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/radio_button_height"
                    android:text="@string/trick_answer4_1"
                    android:id="@+id/answer4"
                    android:onClick="onRadioButtonClicked"
                    android:paddingLeft="@dimen/medium_spacing"
                    android:paddingRight="@dimen/medium_spacing"
                    android:textColor="@color/text_color"
                    android:background="@drawable/radio_button_background"
                    android:button="@android:color/transparent"
                    android:drawableLeft="@drawable/sword"
                    android:drawablePadding="@dimen/small_spacing"
                    android:fontFamily="@font/roboto_light"
                    />
            </RadioGroup>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_general"
                android:padding="@dimen/small_spacing"
                android:visibility="visible"
                android:id="@+id/question_number_layout"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAlignment="center"
                    android:id="@+id/current_question"
                    android:fontFamily="@font/roboto_thin"
                    android:textColor="@color/text_color"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="@dimen/divider_width"
                android:layout_height="@dimen/divider_height"
                android:background="@color/white_general"
                android:layout_gravity="center"
                android:id="@+id/divider1"
                android:orientation="horizontal"
                >
            </LinearLayout>
            <Button
                android:layout_width="@dimen/circle_button_size"
                android:layout_height="@dimen/circle_button_size"
                android:text="@string/submit_s"
                android:onClick="submitAnswer"
                android:layout_gravity="center"
                android:background="@drawable/circle_got"
                android:textSize="@dimen/submit_text_size"
                android:textColor="@color/text_color_white"
                android:fontFamily="@font/game_of_thrones"
                />
            <LinearLayout
                android:layout_width="@dimen/divider_width"
                android:layout_height="@dimen/divider_height"
                android:background="@color/white_general"
                android:layout_gravity="center"
                android:id="@+id/divider2"
                android:orientation="horizontal"
                >
            </LinearLayout>
            <Button
                android:layout_width="@dimen/circle_button_size"
                android:layout_height="@dimen/circle_button_size"
                android:text="@string/reset_r"
                android:textSize="@dimen/submit_text_size"
                android:textColor="@color/submit_got_color"
                android:onClick="resetQuiz"
                android:layout_gravity="center"
                android:background="@drawable/circle_reset_got"
                android:fontFamily="@font/game_of_thrones"
                />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>